force-app/main/default/objects/ScheduledTask__c/ScheduledTask__c.object-meta.xml
<CustomObject>
    <description>Saved agent jobs that run on demand or schedule.</description>
    <label>Scheduled Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>