force-app/main/default/objects/ScheduledTask__c/fields/AgentConfig__c.field-meta.xml
<CustomField>
    <fullName>AgentConfig__c</fullName>
    <label>Agent Config</label>
    <referenceTo>AgentConfig__c</referenceTo>
    <relationshipLabel>Scheduled Tasks</relationshipLabel>
    <relationshipName>ScheduledTasks</relationshipName>
    <type>Lookup</type>
</CustomField>