force-app/main/default/objects/ScheduledTask__c/fields/CronExpression__c.field-meta.xml
<CustomField>
    <fullName>CronExpression__c</fullName>
    <label>Cron Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>