force-app/main/default/objects/ScheduledTask__c/fields/LastRunAt__c.field-meta.xml
<CustomField>
    <fullName>LastRunAt__c</fullName>
    <label>Last Run At</label>
    <type>DateTime</type>
</CustomField>