force-app/main/default/objects/ScheduledTask__c/fields/LastRunStatus__c.field-meta.xml
<CustomField>
    <fullName>LastRunStatus__c</fullName>
    <label>Last Run Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>