force-app/main/default/objects/ScheduledTask__c/fields/OneOffRunAt__c.field-meta.xml
<CustomField>
    <fullName>OneOffRunAt__c</fullName>
    <label>One Off Run At</label>
    <type>DateTime</type>
</CustomField>